--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mystery-box",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "MysteryBox is a lightweight JavaScript class for creating an interactive mini-game with mystery boxes. It allows you to easily configure the number of rounds, the delay before showing results, and custom event handlers for round start and end.",
   "author": "ux-ui.pro",
   "license": "MIT",
@@ -14,32 +14,41 @@
   "homepage": "https://github.com/ux-ui-pro/mystery-box",
   "sideEffects": false,
   "scripts": {
-    "clean": "rm -rf dist .parcel-cache",
-    "build": "yarn clean && parcel build",
-    "lint:js": "eslint **/*.ts",
-    "lint:fix:js": "eslint **/*.ts --fix",
-    "format:js": "prettier --write **/*.ts",
+    "clean": "rimraf dist",
+    "build": "vite build",
+    "lint:js": "eslint **/*.{ts,js}",
+    "lint:fix:js": "eslint **/*.{ts,js} --fix",
+    "format:js": "prettier --write **/*.{ts,js}",
     "lint:fix": "yarn lint:fix:js && yarn format:js"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead",
   "source": "src/index.ts",
-  "main": "dist/index.js",
-  "module": "dist/index.module.js",
-  "types": "dist/mystery-box.d.ts",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.es.js",
+    "require": "./dist/index.cjs.js"
+  },
+  "files": [
+    "dist/"
+  ],
   "devDependencies": {
-    "@eslint/js": "9.17.0",
-    "@parcel/packager-ts": "2.13.3",
-    "@parcel/transformer-typescript-types": "2.13.3",
-    "@typescript-eslint/eslint-plugin": "8.18.2",
-    "@typescript-eslint/parser": "8.18.2",
-    "eslint": "9.17.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "3.7.0",
+    "@eslint/js": "9.21.0",
+    "@rollup/plugin-terser": "0.4.4",
+    "@types/node": "22.13.8",
+    "@typescript-eslint/eslint-plugin": "8.25.0",
+    "@typescript-eslint/parser": "8.25.0",
+    "eslint": "9.18.0",
+    "eslint-config-prettier": "10.0.2",
+    "eslint-import-resolver-typescript": "3.8.3",
     "eslint-plugin-import": "2.31.0",
-    "globals": "15.14.0",
-    "parcel": "2.13.3",
-    "prettier": "3.4.2",
-    "typescript": "5.7.2"
+    "globals": "16.0.0",
+    "prettier": "3.5.2",
+    "rimraf": "6.0.1",
+    "typescript": "5.8.2",
+    "vite": "6.2.0",
+    "vite-plugin-dts": "4.5.1"
   },
   "keywords": [
     "mystery-box",
